[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "qrasp-engine"
version = "0.1.0"
description = "Adversarial Quantum Emulation Sandbox for runtime quantum-state self-protection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Q-RASP-Engine contributors" }]
keywords = ["quantum", "security", "rasp", "qiskit", "cirq", "runtime-protection"]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
cirq = ["cirq>=1.3"]
gateway = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "maturin>=1.5,<2.0",
]

[tool.maturin]
manifest-path = "crates/qrasp-py/Cargo.toml"
python-source = "python"
module-name = "qrasp.qrasp_native"
features = ["pyo3/extension-module"]
